adding pybtex use possibility

--- a/examples/example.bib
+++ b/examples/example.bib
@@ -45,7 +45,7 @@ Dylan Schwilk},
 }
 @article{Marten+As:1900,
   author =       {J\orgen M\"{a}rtin and Sven \AAs},
-  title =        {Names with latex accents and non-English characters},
+  title =        {Names with Latex Accents and Non-English Characters},
   year =         1900,
   journal =      {Journal of Glacial Studies},
   volume =       1,
@@ -54,7 +54,7 @@ Dylan Schwilk},
 
 @article{doe-2525-tq,
   author =       "Doe, John Edgar",
-  title =        "{Testing} quoted strings",
+  title =        "{Testing} Quoted Strings",
   year =         2525,
   journal =      "Testing Quarterly",
   volume =       "{1}",
@@ -62,9 +62,9 @@ Dylan Schwilk},
 }
 @article{Doe:2023,
   author={Doe, John \AAdgar},
-  title =        "Testing quoted strings with accent in entry",
+  title =        "{Testing} Quoted Strings with Accent in Entry",
   year =         1900,
-  journal =      "Testing quarterly",
+  journal =      "Testing Quarterly",
   volume =       "{1}",
   pages =        "1--10",
 } 
@@ -72,17 +72,17 @@ Dylan Schwilk},
   author={Charles Louis Xavier Joseph de la Vallee Poussin},
   title =        {A Long Name},
   year =         1900,
-  journal =      {Testing quarterly},
+  journal =      {Testing Quarterly},
   volume =       {1},
   pages =        {1--20}
 } 
 @article{vanWilgen:1910,
-  author={van Baer Wilgen, jr , Edward Charles},
-  title =        {A vljf test},
+  author={van Baer Wilgen, Jr , Edward Charles},
+  title =        {A vljf Test},
   year =         1910,
-  journal =      {Testing quarterly},
+  journal =      {Testing Quarterly},
   volume =       {1},
   pages =        {21--30}
 } 
-@comment "The text comment"
+@comment{"The text comment"}
 
